--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -1,4 +1,3 @@
-
 .info__details {
     margin-bottom: 30px;
 }
@@ -17,21 +16,24 @@ label {
     display: none;
 }
 
-textarea {
+form textarea {
     max-width: 1015px;
     resize: none;
 }
-input,
+
+form input,
 textarea {
     width: calc(100% - 10px);
     height: 50px;
     margin-bottom: 30px;
     padding: 0;
 }
-input {
+
+form input {
     width: calc(100vw - 30px);
 }
-input,
+
+form input,
 textarea,
 input::-webkit-input-placeholder {
     font-size: 18px;
@@ -42,35 +44,58 @@ input::-webkit-input-placeholder {
     height: 200px;
     line-height: 1;
 }
+
+.checkbox {
+    display: flex;
+}
+
+#checkbox {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+}
+.checkbox p {
+    line-height: 30px;
+}
+
 @media only screen and (min-width: 590px) {
     .info__flex {
         display: flex;
         flex-wrap: wrap;
         justify-content: start;
     }
+
     .info__details {
         width: 45%;
     }
-    input {
+
+    form input {
         width: calc(100vw / 2 - 60px);
         margin: 20px 0;
         max-width: 500px;
     }
-    #společnost, #telefon, #kurz {
+
+    #společnost,
+    #telefon,
+    #kurz {
         margin-right: 8px;
     }
-    textarea {
+
+    form textarea {
         width: calc(100vw - 100px);
     }
 }
-@media only screen and (min-width: 960px)  {
+
+@media only screen and (min-width: 960px) {
     .info__details {
         width: 30%;
     }
-    input {
+
+    form input {
         width: calc(100vw - (100vw / 2) - 110px);
     }
-        textarea {
+
+    form textarea {
         width: 100%;
     }
 }
