--- a/docs/css/firstaid.css
+++ b/docs/css/firstaid.css
@@ -25,7 +25,7 @@
         position: relative;
         margin-bottom: 100px;
     }
-    .btn {
+    main .btn {
         position: absolute;
         bottom: -64px;
         right: calc(50% - 50px);
