--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -17,7 +17,7 @@
     height: calc(100vw - 20px);
     max-height: 330px;
     color: white;
-    background-image: url(../images/training/komunikacni_dovednosti.jpg);
+    line-height: 25px;
 }
 
 .courses__list__course h3 {
@@ -32,10 +32,18 @@
 
 .courses__list {
     margin: 0 auto;
+
 }
 
 .courses__list__course {
     margin-bottom: 10px;
+    position: relative;
+}
+
+.courses__list__course a {
+    position: absolute;
+    bottom: 20px;
+    left: calc(50% - 78px);
 }
 
 .about_us__gallery {
@@ -82,15 +90,22 @@
 .footer__ul li {
     display: block;
 }
+.footer__logo {
+    margin-left: 40px;
+}
+
 @media only screen and (min-width: 540px) {
     .about_us__gallery__figure {
-        width: 160px;
+        width: 33%;
+        max-width: 220px;
     }
 }
+
 @media only screen and (min-width: 590px) {
     .advert__size {
         display: flex;
     }
+
     .advert a {
         margin-right: 0;
     }
@@ -118,13 +133,9 @@
         flex-shrink: 0;
     }
 }
-@media only screen and (min-width: 720px) {
+
+@media only screen and (min-width: 1080px) {
     .about_us__gallery__figure {
-        width: 190px;
-    }
-}
-@media only screen and (min-width: 760px) {
-    .about_us__gallery__figure {
-        width: 152px;
+        width: 160px;
     }
 }
