--- a/docs/css/training-teambuilding.css
+++ b/docs/css/training-teambuilding.css
@@ -13,17 +13,23 @@
     height: calc(100vw - 20px);
     max-height: 330px;
     color: white;
-    background-image: url(../images/training/komunikacni_dovednosti.jpg);
+    position: relative;
+    line-height: 23px;
 }
-
+.courses__list__course a {
+    position: absolute;
+    bottom: 20px;
+    left: calc(50% - 78px);
+}
 .courses__list__course h3 {
     text-align: center;
-    padding-top: 10px;
+    padding-top: 20px;
     padding-bottom: 5px;
 }
 
 .courses__list__course p {
     margin-left: 10px;
+    font-size: 18px;
 }
 
 .courses__list__course {
